# GraphMemory

./: .ckignore  .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  pyrightconfig.json
abstraction/: README.md  __init__.py
configs/: phase1_default.json  phase1_graph_rerank_grid.json
docs/: README.md
graph_memory/: __init__.py  entities.py  evaluation.py  experiment.py  graphs.py  hotpotqa.py  io.py  observability.py  rerank.py  rerank_config.py  retrieval.py  retrieval_registry.py  splits.py  text.py  training_config.py  tuning.py  types.py  validation.py
report/: 2wiki_dataset_results_report.md  dense_ft_memory_stream_analysis.md  dense_ft_rgcn_cross_dataset_report.md  longmemeval_v1_results_report.md  phase1_dev_metrics_analysis.md  phase2_rgcn_ablation_full_train_analysis.md  phase2_rgcn_full_train_analysis.md  phase2_rgcn_gpu_training_report.md
scripts/: aggregate_tables.py  annotate_importance.py  bootstrap_fast_graphrag_nltk.py  build_graphs.py  build_train_pairs.py  evaluate_retrieval.py  experiment.py  make_dense_ft_rgcn_charts.py  prepare_2wiki.py  prepare_dataset.py  prepare_hotpotqa.py  prepare_longmemeval.py  run_retrieval.py  run_trainable_retrieval.py  train_graph_retriever.py  train_method.py  tune_graph_rerank.py  tune_memory_stream.py
tests/: test_architecture_invariants.py  test_batched_collection_consumers.py  test_batched_dense_encoding.py  test_batched_graph_features.py  test_clean_importance.py  test_cli_contracts.py  test_config_loader.py  test_config_registry_architecture.py  test_config_run_retrieval.py  (+91 more)
(+480 files in other folders)
