[project]
name = "graph-memory"
version = "0.1.0"
description = "Execution-Provenance Graph Memory evidence-tracing retrieval with graph rerank and R-GCN retriever"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.0",
    "datasets>=3.0",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",
    "torch>=2.11,<2.12",
    "torchvision>=0.26,<0.27",
    "tqdm>=4.66",
    "typing-extensions>=4.10",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.optional-dependencies]
ner = [
    "spacy>=3.7",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.5",
    "pytest>=8.0",
    "ruff>=0.15.13",
]

[tool.pytest.ini_options]
pythonpath = ["."]
